# nomad-distro-template-test3

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx.conf  nomad-realm.json  nomad.yaml
nomad_lab_patch/: dev.py  ui.py
tests/: docker-compose.yml
