[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[infrastructure]>=1.4.1",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0.6",
  "ccpnc-oasis-app @ git+https://github.com/CCP-NC/ccpnc-oasis-app.git@5a5cdbe6f281f18bd609a0c7f653b02dfde78704",
  "nomad-oasis-schema-parser-plugin @ git+https://github.com/CCP-NC/nomad-oasis-schema-parser-plugin.git@a65b9093e273ffb973039c9e6b386d48258835e6",
]


[project.urls]
repository = "https://github.com/sathya-s3/nomad-distro-template-test3"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-north-jupyter>=0.2.1"
  ]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"
constraint-dependencies = ["flatdict>=4.1.0"]
#remove override when final version is available
override-dependencies = [
  "nomad-nmr-schema @ git+https://github.com/FAIRmat-NFDI/nomad-schema-plugin-nmr.git@d10df31538acbf824affe0e0635407602b9df490",
  # Fetch a specific nomad-simulations version
  "nomad-simulations @ git+https://github.com/nomad-coe/nomad-simulations.git@46ed5a5d0632eac22267c9d38e9a4c66f43a5b38"
]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
