[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[infrastructure]>=1.4.2",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-parser-plugins-electronic>=1.0.16",
  "nomad-parser-plugins-atomistic>=1.0.6",
  "ccpnc-oasis-app @ git+https://github.com/CCP-NC/ccpnc-oasis-app.git@v0.2.2",
  "nomad-oasis-schema-parser-plugin @ git+https://github.com/CCP-NC/nomad-oasis-schema-parser-plugin.git@v1.0.1",
]


[project.urls]
repository = "https://github.com/sathya-s3/nomad-distro-template-test3"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-north-jupyter>=0.2.1",
 "nomad-simulations @ git+https://github.com/nomad-coe/nomad-simulations.git@develop"
  ]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"
constraint-dependencies = ["flatdict>=4.1.0"]
#remove override when final version is available
override-dependencies = [
  #"nomad-nmr-schema @ git+https://github.com/FAIRmat-NFDI/nomad-schema-plugin-nmr.git@850e594579df2a1eaf1e8ab84b1bac91b31e5148",
  ## Fetch a specific nomad-simulations version
  "nomad-simulations @ git+https://github.com/nomad-coe/nomad-simulations.git@v0.7.0"
]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
